--- a/tool/pom.xml
+++ b/tool/pom.xml
@@ -26,6 +26,11 @@
 		<!--</repository>-->
 
 		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</repository>
+
+		<repository>
 			<id>central</id>
 			<name>Central Repository</name>
 			<url>https://repo.maven.apache.org/maven2</url>
@@ -133,7 +138,7 @@
 		<dependency>
 			<groupId>com.ibm</groupId>
 			<artifactId>wala-core-tests</artifactId>
-			<version>1.3</version>
+			<version>1.5.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.ibm</groupId>
